[package]
name = "liburing"
version = "2.5.0"
description = "liburing bindings"
keywords = ["io_uring", "liburing"]
license = "MIT OR Apache-2.0"
edition = "2018"
links = "uring"

[dependencies]
libc = "0.2.151"

[build-dependencies]
bindgen = { version = "0.69.1", features = ["experimental"] }
cc = "1.0.83"

[dev-dependencies]
tempfile = "3.9.0"
